--- a/docker-compose.gateway.udp.yml
+++ b/docker-compose.gateway.udp.yml
@@ -1,15 +1,14 @@
-version: "3.8"
+version: "3.9"
 services:
   copter:
     environment:
       - MAVLINK_OUT_HOST=mavgw
-    image: arthurrichards77/ardupilot-sitl-docker
-#    ports:
-#      - "14552:14552/udp"
+    #build local images  with  "docker build -t ardupilot-sitl-docker ."
+    #(don't forget to sync WSL clock with "sudo hwclock -s" in Ubuntu terminal)
+    image: ardupilot-sitl-docker
   mavgw:
-    image: arthurrichards77/ardupilot-sitl-docker
+    image: ardupilot-sitl-docker
     container_name: mavgw
-#    command: mavproxy.py --non-interactive --source-system=254 --target-system=1 --master=udp:0.0.0.0:14553 --out=udpin:0.0.0.0:14554 --out=udpin:0.0.0.0:14555
     command: ../mavp2p --hb-systemid=123 udps:0.0.0.0:14553 tcps:0.0.0.0:14554 tcps:0.0.0.0:14555
     ports:
       - "14554:14554/tcp"
