Added UDP stream output on localhost:14556

--- a/docker-compose.gateway.udp.yml
+++ b/docker-compose.gateway.udp.yml
@@ -28,6 +28,7 @@ services:
     ports:
       - "14554:14554/tcp"
       - "14555:14555/tcp"
+      - "14556:14556/udp"
     volumes:
       - shared-content:/home/pilot/ips
       
